# Task-Manager

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_status_name_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_remove_task_label_task_labels.py  0002_tasksandlabels_task_labels.py
task_manager/templates/: base_layout.html  homepage.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  overview.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: statuses_tests.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py  users_tests.py
task_manager/tests/fixtures/: statuses.json
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: tests.py
(+1 files in other folders)
