[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Elena Dobruk <elena.dobruk@yandex.ru>"]
readme = "README.md"
classifiers = ["Topic :: Software Development"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
django-bootstrap5 = "^24.2"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
